--- a/src/Resources/views/storefront/component/elysium-slider/navigation.html.twig
+++ b/src/Resources/views/storefront/component/elysium-slider/navigation.html.twig
@@ -15,6 +15,7 @@
             {% if element.translated.config.arrows.value.active %}
                 {% sw_include '@Storefront/storefront/component/elysium-slider/navigation-action.html.twig' with {
                     icon: element.translated.config.arrows.value.icon.default ~ '-left',
+                    label: 'elysiumSlider.navigation.actionPrev'|trans,
                     btnClasses: ['swiper-action-prev', 'btn-link', 'position-absolute', 'top-50', 'z-2', 'translate-middle-y']
                 } %}
             {% endif %}
@@ -24,6 +25,7 @@
             {% if element.translated.config.arrows.value.active %}
                 {% sw_include '@Storefront/storefront/component/elysium-slider/navigation-action.html.twig' with {
                     icon: element.translated.config.arrows.value.icon.default ~ '-right',
+                    label: 'elysiumSlider.navigation.actionNext'|trans,
                     btnClasses: ['swiper-action-next', 'btn-link', 'position-absolute', 'top-50', 'z-2', 'translate-middle-y']
                 } %}
             {% endif %}
