--- a/src/Resources/views/storefront/component/elysium-slider/header.html.twig
+++ b/src/Resources/views/storefront/component/elysium-slider/header.html.twig
@@ -10,14 +10,22 @@
     'mb-4'
 ] %}
 
+{% set srOnly = srOnly|default(false) %}
 {% set titleTag = titleTag|default('div') %}
+
+{% if srOnly is same as(true) %}
+    {% set headerClasses = headerClasses|merge(['visually-hidden']) %}
+{% endif %}
 
 {% block component_elysium_slider_header %}
     <header class="{{headerClasses|join(' ')}}">
 
         {% block component_elysium_slider_title %}
             {% if title is not empty %}
-                <{{titleTag|raw}} class="{{titleClasses|join(' ')}}">
+                <{{titleTag|raw}} 
+                    aria-label="{{ title|striptags }}"
+                    id="elysiumSlider-{{ element.id }}-title"
+                    class="{{titleClasses|join(' ')}}">
                     {{ title }}
                 </{{titleTag|raw}}>
             {% endif %}
