--- a/src/Resources/app/storefront/src/scss/_elysium-slider.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slider.scss
@@ -77,6 +77,11 @@
         }
     }
 
+    .swiper-wrapper {
+        padding: 0px;
+        margin: 0px;
+    }
+
     .swiper-slide {
         height: auto;
         min-height: 100%;
