--- a/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
@@ -70,16 +70,23 @@
 
 {% block cms_element_elysium_slider %}
     {% if element.data.slideCollection is not empty %}
-        <div
+        <section
             id="elysiumSlider-{{ element.id }}" 
             class="{{cmsElementClasses|join(' ')}}"
+            role="region"
+            {% if sliderTitle is not empty %}
+                aria-labelledby="elysiumSlider-{{ element.id }}-title"
+            {% endif %}
             data-elysium-slider
             data-swiper-options="{{swiperOptions|json_encode}}">
 
             {% block cms_element_elysium_slider_header %} 
+
                 {% if sliderTitle is not empty %} 
                     {% sw_include '@Storefront/storefront/component/elysium-slider/header.html.twig' with {
-                        title: sliderTitle
+                        title: sliderTitle,
+                        titleTag: element.translated.config.content.value.titleTag|default('div'),
+                        srOnly: element.translated.config.content.value.titleSrOnly|default(false)
                     } %}
                 {% endif %}
             {% endblock %}
@@ -87,10 +94,22 @@
             {% block cms_element_elysium_slider_container %}
                 <div 
                     class="swiper"
+                    id="swiper-{{ element.id }}"
                     data-elysium-slider-swiper>
 
+                    {% block cms_element_elysium_slider_live_update %}
+                        <span 
+                            class="visually-hidden" 
+                            aria-live="polite"
+                            data-live-update>
+                            {{ 'elysiumSlider.showSlidesIndicator'|trans }}
+                        </span>
+                    {% endblock %}
+
                     {% block cms_element_elysium_slider_wrapper %}
-                        <div class="swiper-wrapper">
+                        <ul 
+                            role="list"
+                            class="swiper-wrapper">
 
                             {% for slide in element.data.slideCollection %}
                                 {% block cms_element_elysium_slider_item %}
@@ -106,17 +125,19 @@
                                         {% set slideFile = slide.slideSettings.customTemplateFile ~ '.html.twig' %}
                                     {% endif %}
 
-                                    <div class="swiper-slide">
+                                    <li 
+                                        role="listitem"
+                                        class="swiper-slide">
                                         {% block cms_element_blur_elysium_slider_slide %}
                                             {% sw_include '@Storefront/storefront/component/blur-elysium-slide/' ~ slideTemplate ~ '/' ~ slideFile ignore missing with {
                                                 slideData: slide,
                                                 showContainerWrapper: showContainerWrapper
                                             } %}
                                         {% endblock %}
-                                    </div>
+                                    </li>
                                 {% endblock %}
                             {% endfor %}
-                        </div>
+                        </ul>
                     {% endblock %}
 
                     {% block cms_element_elysium_slider_navigation %}
@@ -143,7 +164,7 @@
                 {% endblock %}
 
             {% endblock %}
-        </div>
+        </section>
     {% else %}
         {% block cms_element_elysium_slider_empty %}
             {% set cmsElementClasses = cmsElementClasses|merge(['is-empty']) %}
