wip(a11y): add aria attributes to slider pagination

--- a/src/Resources/views/storefront/component/elysium-slider/pagination.html.twig
+++ b/src/Resources/views/storefront/component/elysium-slider/pagination.html.twig
@@ -2,13 +2,21 @@
     'swiper-pagination',
     'pagination-bullets-' ~ element.translated.config.navigation.value.shape,
 ] %}
+
 {% if paginationClasses is defined %}
     {% set paginationClasses = paginationDefaultClasses|merge(paginationClasses) %}
 {% else %}
     {% set paginationClasses = paginationDefaultClasses %}
 {% endif %}
 
+{% set label = label|default(false) %}
+
 {% block component_elysium_slider_pagination %}
-    <div class="{{ paginationClasses|join(' ') }}">
+    <div 
+        role="navigation"
+        {% if label %}
+            aria-label="{{ label }}"
+        {% endif %}
+        class="{{ paginationClasses|join(' ') }}">
     </div>
 {% endblock %}
