--- a/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
@@ -149,7 +149,8 @@
                     {% block cms_element_elysium_slider_pagination_inside_slider %}
                         {% if element.translated.config.navigation.value.active and element.translated.config.navigation.value.position is same as('in_slider') %}
                             {% sw_include '@Storefront/storefront/component/elysium-slider/pagination.html.twig' with {
-                                paginationClasses: ['d-flex', 'flex-wrap', 'position-absolute', 'bottom-0', 'start-0', 'end-0', 'top-auto', 'z-2']
+                                paginationClasses: ['d-flex', 'flex-wrap', 'position-absolute', 'bottom-0', 'start-0', 'end-0', 'top-auto', 'z-2'],
+                                label: 'elysiumSlider.pagination.label'|trans
                             } %}
                         {% endif %}
                     {% endblock %}
@@ -158,7 +159,8 @@
                 {% block cms_element_elysium_slider_pagination_below_slider %}
                     {% if element.translated.config.navigation.value.active and element.translated.config.navigation.value.position is same as('below_slider') %}
                         {% sw_include '@Storefront/storefront/component/elysium-slider/pagination.html.twig' with {
-                            paginationClasses: ['d-flex', 'flex-wrap']
+                            paginationClasses: ['d-flex', 'flex-wrap'],
+                            label: 'elysiumSlider.pagination.label'|trans
                         } %}
                     {% endif %}
                 {% endblock %}
