--- a/src/Resources/app/storefront/src/scss/_elysium-slider.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slider.scss
@@ -1,70 +1,3 @@
-.swiper-action {
-    --#{$prefix}btn-bg: var(--nav-action-bg-color, transparent);
-    --#{$prefix}btn-hover-bg: var(--nav-action-bg-color-active, transparent);
-    --#{$prefix}btn-color: var(--nav-action-icon-color, rgba(255, 255, 255, 0.75));
-    --#{$prefix}btn-hover-color: var(--nav-action-icon-color-active, rgba(255, 255, 255, 1));
-    --#{$prefix}btn-active-color: var(--nav-action-icon-color-active, rgba(255, 255, 255, 1));
-    --#{$prefix}btn-border-width: var(--nav-action-border-width, 2px);
-    --#{$prefix}btn-border-color: var(--nav-action-border-color, transparent);
-    --#{$prefix}btn-border-radius: var(--nav-action-border-radius, transparent);
-    --#{$prefix}btn-padding-x: var(--nav-action-padding, 10px);
-    --#{$prefix}btn-padding-y: var(--nav-action-padding, 10px);
-
-    .icon {
-        width: var(--nav-action-icon-size, 24px);
-        height: var(--nav-action-icon-size, 24px);
-        color: inherit;
-        display: block;
-        line-height: 1;
-    }
-
-    &.swiper-action-prev {
-        left: var(--nav-action-offset, 0px);
-    }
-
-    &.swiper-action-next {
-        right: var(--nav-action-offset, 0px);
-    }
-
-    &:disabled,
-    &.swiper-button-disabled {
-        opacity: var(--nav-action-opacity, 0);
-    }
-
-    svg {
-        top: auto !important;
-    }
-}
-
-.swiper-navigation {
-    display: var(--nav-display, contents);
-}
-
-.swiper-pagination {
-    padding: var(--pagination-padding-y, 20px) var(--pagination-padding-x, 20px);
-    gap: var(--pagination-gap, 16px);
-    justify-content: var(--pagination-justify-content, center);
-}
-
-.swiper-pagination-bullet {
-    @extend .d-block;
-    aspect-ratio: var(--pagination-bullet-aspect-ratio, 1 / 1);
-    width: var(--pagination-bullet-size, 16px);
-    background-color: var(--pagination-bullet-color, rgba(0, 0, 0, 0.25));
-    border-radius: var(--pagination-bullet-radius, 100px);
-    cursor: var(--pagination-bullet-cursor, pointer);
-    transition: var(--pagination-bullet-transition, all 300ms);
-
-    &:hover,
-    &.swiper-pagination-bullet-active {
-        background-color: var(--pagination-bullet-color-active, rgba(0, 0, 0, 0.5));
-    }
-}
-
-.pagination-bullets-bar {
-    --pagination-bullet-aspect-ratio: 4 / 1;
-}
-
 .cms-element-elysium-slider {
     position: relative;
 
@@ -75,16 +8,6 @@
             flex-direction: row;
             flex: 0 0 auto;
         }
-    }
-
-    .swiper-wrapper {
-        padding: 0px;
-        margin: 0px;
-    }
-
-    .swiper-slide {
-        height: auto;
-        min-height: 100%;
     }
 
     &.slide-overlay {
@@ -100,4 +23,84 @@
             z-index: 2;
         }
     }
+
+    .swiper {
+
+        &-wrapper {
+            padding: 0px;
+            margin: 0px;
+        }
+
+        &-slide {
+            height: auto;
+            min-height: 100%;
+        }
+
+        &-action {
+            --#{$prefix}btn-bg: var(--nav-action-bg-color, transparent);
+            --#{$prefix}btn-hover-bg: var(--nav-action-bg-color-active, transparent);
+            --#{$prefix}btn-color: var(--nav-action-icon-color, rgba(255, 255, 255, 0.75));
+            --#{$prefix}btn-hover-color: var(--nav-action-icon-color-active, rgba(255, 255, 255, 1));
+            --#{$prefix}btn-active-color: var(--nav-action-icon-color-active, rgba(255, 255, 255, 1));
+            --#{$prefix}btn-border-width: var(--nav-action-border-width, 2px);
+            --#{$prefix}btn-border-color: var(--nav-action-border-color, transparent);
+            --#{$prefix}btn-border-radius: var(--nav-action-border-radius, transparent);
+            --#{$prefix}btn-padding-x: var(--nav-action-padding, 10px);
+            --#{$prefix}btn-padding-y: var(--nav-action-padding, 10px);
+
+            .icon {
+                width: var(--nav-action-icon-size, 24px);
+                height: var(--nav-action-icon-size, 24px);
+                color: inherit;
+                display: block;
+                line-height: 1;
+            }
+
+            &.swiper-action-prev {
+                left: var(--nav-action-offset, 0px);
+            }
+
+            &.swiper-action-next {
+                right: var(--nav-action-offset, 0px);
+            }
+
+            &:disabled,
+            &.swiper-button-disabled {
+                opacity: var(--nav-action-opacity, 0);
+            }
+
+            svg {
+                top: auto !important;
+            }
+        }
+
+        &-navigation {
+            display: var(--nav-display, contents);
+        }
+
+        &-pagination {
+            padding: var(--pagination-padding-y, 20px) var(--pagination-padding-x, 20px);
+            gap: var(--pagination-gap, 16px);
+            justify-content: var(--pagination-justify-content, center);
+
+            &-bullet {
+                @extend .d-block;
+                aspect-ratio: var(--pagination-bullet-aspect-ratio, 1 / 1);
+                width: var(--pagination-bullet-size, 16px);
+                background-color: var(--pagination-bullet-color, rgba(0, 0, 0, 0.25));
+                border-radius: var(--pagination-bullet-radius, 100px);
+                cursor: var(--pagination-bullet-cursor, pointer);
+                transition: var(--pagination-bullet-transition, all 300ms);
+
+                &:hover,
+                &.swiper-pagination-bullet-active {
+                    background-color: var(--pagination-bullet-color-active, rgba(0, 0, 0, 0.5));
+                }
+
+                &.pagination-bullets-bar {
+                    --pagination-bullet-aspect-ratio: 4 / 1;
+                }
+            }
+        }
+    }    
 }
