--- a/src/Resources/app/administration/src/component/slides/section/base/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/section/base/template.html.twig
@@ -1,36 +1,9 @@
-<mt-card
-    position-identifier="blurElysium.slide.section.base"
-    :title="cardTitle"
-    :class="['content-no-padding']"
-    :style="{
-        overflow: 'visible',
-    }"
->
-    <template #headerRight>
-        <blur-device-switch
-            layout="row"
-            show-label="false"
-            :style="{
-                padding: '0',
-                width: '100%',
-                justifyContent: 'center',
-                '--container-gap': '12px',
-                '--icon-padding': '6px',
-                '--icon-bg-color': '#ffffff',
-                '--icon-hover-bg-color': 'var(--color-gray-100)',
-            }"
-            :device="device"
-            @change-device="device => elysiumUI.setDevice(device)"
-        />
-    </template>
-
-    <template #tabs>
-        <mt-tabs
-            :defaultItem="activeTab"
-            :items="tabs"
-            @new-item-active="activeTab = $event"
-        />
-    </template>
+<div>
+    <mt-tabs
+        :defaultItem="activeTab"
+        :items="tabs"
+        @new-item-active="activeTab = $event"
+    />
     <elysium-slides-form-general v-if="activeTab === 'content'"/>
     <elysium-slides-form-linking v-if="activeTab === 'linking'"/>
-</mt-card>
+</div>
