--- a/src/Resources/app/administration/src/component/fy/input/text/template.html.twig
+++ b/src/Resources/app/administration/src/component/fy/input/text/template.html.twig
@@ -1,5 +1,5 @@
 <div 
-    class="fy-input"
+    :class="['fy-input', { 'is-error': error }] "
     :style="viewStyle(styles.container)">
 
     <label 
@@ -9,11 +9,28 @@
         <span 
             class="fy-input-required"
             v-if="required">*</span>
+        <span
+            v-tooltip="{
+                message: 'casvx',
+            }"
+        >i</span>
     </label>
 
     <input 
         type="text"
-        placeholder="Placeholder"
-        class="fy-input-text"
+        :value="modelValue"
+        @input="$emit('update:modelValue', $event.target.value)"
+        :placeholder="placeholder"
+        class="fy-input-text fy-input-control"
         :style="viewStyle(styles.input)" />
+
+    <div
+        v-if="error"
+        :style="{
+            'grid-column': 'auto / span 2',
+            'font-size': '12px',
+            'text-align': 'right'
+        }">
+        {{ error._detail }}
+    </div>
 </div>
